--- a/style.css
+++ b/style.css
@@ -1,21 +1,48 @@
+
+
+html{
+    background-image: linear-gradient(118deg, rgba(119, 228, 119,0.2) 0%, rgba(119, 228, 119,0.2) 16.667%,rgba(108, 224, 149,0.2) 16.667%, rgba(108, 224, 149,0.2) 33.334%,rgba(151, 239, 30,0.2) 33.334%, rgba(151, 239, 30,0.2) 50.001%,rgba(97, 220, 179,0.2) 50.001%, rgba(97, 220, 179,0.2) 66.668%,rgba(140, 235, 60,0.2) 66.668%, rgba(140, 235, 60,0.2) 83.335%,rgba(129, 231, 90,0.2) 83.335%, rgba(129, 231, 90,0.2) 100.002%),linear-gradient(73deg, rgba(119, 228, 119,0.2) 0%, rgba(119, 228, 119,0.2) 16.667%,rgba(108, 224, 149,0.2) 16.667%, rgba(108, 224, 149,0.2) 33.334%,rgba(151, 239, 30,0.2) 33.334%, rgba(151, 239, 30,0.2) 50.001%,rgba(97, 220, 179,0.2) 50.001%, rgba(97, 220, 179,0.2) 66.668%,rgba(140, 235, 60,0.2) 66.668%, rgba(140, 235, 60,0.2) 83.335%,rgba(129, 231, 90,0.2) 83.335%, rgba(129, 231, 90,0.2) 100.002%),linear-gradient(163deg, rgba(119, 228, 119,0.2) 0%, rgba(119, 228, 119,0.2) 16.667%,rgba(108, 224, 149,0.2) 16.667%, rgba(108, 224, 149,0.2) 33.334%,rgba(151, 239, 30,0.2) 33.334%, rgba(151, 239, 30,0.2) 50.001%,rgba(97, 220, 179,0.2) 50.001%, rgba(97, 220, 179,0.2) 66.668%,rgba(140, 235, 60,0.2) 66.668%, rgba(140, 235, 60,0.2) 83.335%,rgba(129, 231, 90,0.2) 83.335%, rgba(129, 231, 90,0.2) 100.002%),linear-gradient(163deg, rgb(186, 121, 16),rgb(25,61,211));
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+body{
+    height: 100vh;
+    width: 100vh;
+}
+
+
+
+
 h1{
+    width: 100vw;
+    border: 2px solid green;
     display: flex;
     justify-content: center;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    
 }
 
 
 form{
-    
-    height: 40vh;
-    width: 40vw;
+    height: 30vh;
+    width: 20vw;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-left: 30vw;
+    margin-left: 40vw;
     border: 2px black solid;
-    box-sizing: content-box;
     padding: 15px;
+    font-size: 18px;
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
 }
-div form{
-    padding: 20px;
+.form-group{
+    text-align: center;
+    justify-content: center;
 }
+.button{
+    margin-top: 20px;
+}
+
+
