--- a/style.css
+++ b/style.css
@@ -1,31 +1,44 @@
-
-
-html{
-    background-image: linear-gradient(118deg, rgba(119, 228, 119,0.2) 0%, rgba(119, 228, 119,0.2) 16.667%,rgba(108, 224, 149,0.2) 16.667%, rgba(108, 224, 149,0.2) 33.334%,rgba(151, 239, 30,0.2) 33.334%, rgba(151, 239, 30,0.2) 50.001%,rgba(97, 220, 179,0.2) 50.001%, rgba(97, 220, 179,0.2) 66.668%,rgba(140, 235, 60,0.2) 66.668%, rgba(140, 235, 60,0.2) 83.335%,rgba(129, 231, 90,0.2) 83.335%, rgba(129, 231, 90,0.2) 100.002%),linear-gradient(73deg, rgba(119, 228, 119,0.2) 0%, rgba(119, 228, 119,0.2) 16.667%,rgba(108, 224, 149,0.2) 16.667%, rgba(108, 224, 149,0.2) 33.334%,rgba(151, 239, 30,0.2) 33.334%, rgba(151, 239, 30,0.2) 50.001%,rgba(97, 220, 179,0.2) 50.001%, rgba(97, 220, 179,0.2) 66.668%,rgba(140, 235, 60,0.2) 66.668%, rgba(140, 235, 60,0.2) 83.335%,rgba(129, 231, 90,0.2) 83.335%, rgba(129, 231, 90,0.2) 100.002%),linear-gradient(163deg, rgba(119, 228, 119,0.2) 0%, rgba(119, 228, 119,0.2) 16.667%,rgba(108, 224, 149,0.2) 16.667%, rgba(108, 224, 149,0.2) 33.334%,rgba(151, 239, 30,0.2) 33.334%, rgba(151, 239, 30,0.2) 50.001%,rgba(97, 220, 179,0.2) 50.001%, rgba(97, 220, 179,0.2) 66.668%,rgba(140, 235, 60,0.2) 66.668%, rgba(140, 235, 60,0.2) 83.335%,rgba(129, 231, 90,0.2) 83.335%, rgba(129, 231, 90,0.2) 100.002%),linear-gradient(163deg, rgb(186, 121, 16),rgb(25,61,211));
+html {
+   
+  
     background-size: cover;
     background-repeat: no-repeat;
+    border: 4px solid rgb(18, 3, 55);
 }
 body{
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
+    background-image: linear-gradient(118deg, rgba(119, 228, 119, 0.2) 0%, rgba(119, 228, 119, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 100.002%), linear-gradient(73deg, rgba(119, 228, 119, 0.2) 0%, rgba(119, 228, 119, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 100.002%), linear-gradient(163deg, rgba(119, 228, 119, 0.2) 0%, rgba(119, 228, 119, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 100.002%), linear-gradient(163deg, rgb(186, 121, 16), rgb(25, 61, 211));
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-
-
-
-h1{
-    width: 100vw;
-    border: 2px solid green;
+h1 {
+    
+    border: 6px solid green;
     display: flex;
     justify-content: center;
+    font-size: 50px;
     text-align: center;
+    text-decoration:  double underline;
     font-family: 'Times New Roman', Times, serif;
+    color: rgb(18, 3, 55);
+}
+
+h2 {
+    display: flex;
+    justify-content: center;
+    color: rgb(18, 3, 55);
+    background-color: green;
+    text-align: center;
     
+
 }
 
 
-form{
-    height: 30vh;
+form {
+    height: 50vh;
     width: 20vw;
     display: flex;
     justify-content: center;
@@ -34,15 +47,29 @@ form{
     border: 2px black solid;
     padding: 15px;
     font-size: 18px;
-    color: black;
+    color: #fff;
+    background-color: rgb(18, 3, 55);
     font-family: 'Times New Roman', Times, serif;
 }
-.form-group{
+
+.photo{
+    display: block;
+    height: 80vh;
+    width: 60vw;
+    margin-left: 20%;
+}
+    
+
+
+.form-group {
     text-align: center;
     justify-content: center;
 }
-.button{
-    margin-top: 20px;
+
+.title {
+    margin-top: 60px;
 }
 
-
+.button {
+    margin-top: 5px;
+}
