--- a/style.css
+++ b/style.css
@@ -38,9 +38,10 @@ h2 {
 
 
 form {
-    height: 52vh;
+    height: 85vh;
     width: 20vw;
     margin-left: 40vw;
+    padding: 40px;
     border: 2px black solid;
     font-size: 18px;
     color: #fff;
@@ -48,6 +49,7 @@ form {
     font-family: 'Times New Roman', Times, serif;
 }
 .label{
+    color: blue;
     padding: 2px;
 }
 .photo{
@@ -63,11 +65,12 @@ form {
 
 .button {
     display: flex;
+    color: blue;
     justify-content: center;
     margin-top: 10px;
 }
-/*choices*/
-.choice1{
-    display: flex;
-    margin-left: 20px;
-}
+
+
+
+
+
