--- a/style.css
+++ b/style.css
@@ -1,27 +1,33 @@
 html {
-   
-  
-    background-size: cover;
-    background-repeat: no-repeat;
+    min-height: 100vh;
+    scroll-behavior: smooth;
     border: 4px solid rgb(18, 3, 55);
 }
-body{
-    height: 100vh;
+
+main {
+
+    min-height: 100vh;
     width: 100vw;
-    background-image: linear-gradient(118deg, rgba(119, 228, 119, 0.2) 0%, rgba(119, 228, 119, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 100.002%), linear-gradient(73deg, rgba(119, 228, 119, 0.2) 0%, rgba(119, 228, 119, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 100.002%), linear-gradient(163deg, rgba(119, 228, 119, 0.2) 0%, rgba(119, 228, 119, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 100.002%), linear-gradient(163deg, rgb(186, 121, 16), rgb(25, 61, 211));
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-image: linear-gradient(118deg, rgba(119, 228, 119, 0.2) 0%, rgba(119, 228, 119, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 100.002%), linear-gradient(73deg, rgba(119, 228, 119, 0.2) 0%, rgba(119, 228, 119, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 100.002%), linear-gradient(163deg, rgba(119, 228, 119, 0.2) 0%, rgba(119, 228, 119, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 16.667%, rgba(108, 224, 149, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 33.334%, rgba(151, 239, 30, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 50.001%, rgba(97, 220, 179, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 66.668%, rgba(140, 235, 60, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 83.335%, rgba(129, 231, 90, 0.2) 100.002%), linear-gradient(163deg, rgb(186, 121, 16), rgb(25, 61, 211));
+
+}
+header{
+    
+    background-color: green;
+    border: 4px solid rgb(18, 3, 55);
 }
 
 h1 {
-    
+
     border: 6px solid green;
     display: flex;
     justify-content: center;
     font-size: 50px;
     text-align: center;
-    text-decoration:  double underline;
+    border: 3px solid rgb(18, 3, 55);
     font-family: 'Times New Roman', Times, serif;
     color: rgb(18, 3, 55);
 }
@@ -32,13 +38,13 @@ h2 {
     color: rgb(18, 3, 55);
     background-color: green;
     text-align: center;
-    
+
 
 }
 
 
 form {
-    height: 85vh;
+    height: 110vh;
     width: 20vw;
     margin-left: 40vw;
     padding: 40px;
@@ -48,11 +54,13 @@ form {
     background-color: rgb(18, 3, 55);
     font-family: 'Times New Roman', Times, serif;
 }
-.label{
+
+.label {
     color: blue;
     padding: 2px;
 }
-.photo{
+
+.photo {
     display: block;
     height: 80vh;
     width: 60vw;
@@ -69,8 +77,3 @@ form {
     justify-content: center;
     margin-top: 10px;
 }
-
-
-
-
-
