--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ h1 {
 
 h2 {
     display: flex;
+    font-weight: 900;
     justify-content: center;
     color: rgb(18, 3, 55);
     background-color: green;
@@ -56,11 +57,6 @@ form {
     background-color: rgb(18, 3, 55);
     font-family: 'Times New Roman', Times, serif;
 }
-
-label {}
-
-
-
 
 /*image*/
 .photo {
